whitespace fix for strings

--- a/ref.css
+++ b/ref.css
@@ -317,7 +317,6 @@
 	white-space: -o-pre-wrap; /* Opera 7 */
 	white-space: -pre-wrap; /* Opera 4-6 */
 	white-space: pre-wrap; /* CSS 2.1 */
-	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
 	word-wrap: break-word; /* IE */
 	word-break: break-all;
 }
